@@ -1,3 +1,7 @@
+2010-04-12  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Added feature #14065: Add hook for including Static TypoScript after all Static Templates are included
+
 2010-04-12  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #13116: htmlArea RTE: Allow to hide counting classes
